--- a/themes/chronicle/_config.yml
+++ b/themes/chronicle/_config.yml
@@ -7,6 +7,7 @@ nav:
   Tags: /tags/
   Project: /project/
   About: /about/
+  GitHub: https://github.com/taotao7
 
 # Accent color (amber/warm orange)
 accent_color: "#D4883A"
