--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: "Asia/Shanghai"
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
 url: https://taotao7.top
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:slug/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -92,7 +92,9 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 #include:
-#exclude:
+exclude:
+  - "**/*.zh-CN.md"
+  - "**/*.zh-CN/"
 ignore:
 
 # Extensions
